# profun

./: README.md  default.nix
functional/: ChangeLog.md  LICENSE  README.md  functional.cabal  stack.yaml
functional/src/: Game.hs  Logic.hs  Main.hs  Rendering.hs
procedural/: CMakeLists.txt  README.md  game.h  logic.c  logic.h  main.c  rendering.c  rendering.h
